# cpp_rock_paper_scissors

./: CMakeLists.txt  README.md  config.cmake  run_code_coverage.sh
.github/workflows/: clang-tidy.yml
code_coverage/: index-sort-f.html  index-sort-l.html  index.html
code_coverage/include/: Config.h.func-sort-c.html  Config.h.func.html  Config.h.gcov.html  Hand.h.func-sort-c.html  Hand.h.func.html  Hand.h.gcov.html  Input.h.func-sort-c.html  Input.h.func.html  Input.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
code_coverage/src/: Game.cpp.func-sort-c.html  Game.cpp.func.html  Game.cpp.gcov.html  Input.cpp.func-sort-c.html  Input.cpp.func.html  Input.cpp.gcov.html  Turn.cpp.func-sort-c.html  Turn.cpp.func.html  Turn.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
code_coverage/usr/include/c++/11/: index-sort-f.html  index-sort-l.html  index.html  optional.func-sort-c.html  optional.func.html  optional.gcov.html
code_coverage/usr/include/c++/11/bits/: index-sort-f.html  index-sort-l.html  index.html  move.h.func-sort-c.html  move.h.func.html  move.h.gcov.html  random.h.func-sort-c.html  random.h.func.html  random.h.gcov.html  random.tcc.func-sort-c.html  random.tcc.func.html  random.tcc.gcov.html  stl_algobase.h.func-sort-c.html  stl_algobase.h.func.html  (+4 more)
game/: CMakeLists.txt
game.exe/src/: main.cpp
game/include/: Config.h  Game.h  Hand.h  Input.h  Turn.h
game/src/: Game.cpp  Input.cpp  Turn.cpp
precompiled/: Game-ubuntu20-gcc11
test/: CMakeLists.txt  test_game.cpp  test_hand.cpp  test_input.cpp  test_turn.cpp
(+6 files in other folders)
